@@ -7,6 +7,8 @@ VERSION="`cat VERSION`"
 PACKAGE=aprx
 dnl AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
 
+AC_PROG_MAKE_SET
+
 AC_CONFIG_HEADERS([config.h])
 
 dnl Checks for programs.
@@ -14,8 +16,10 @@ AC_PROG_CC
 AC_PROG_GCC_TRADITIONAL
 
 dnl Checks for libraries.
-AC_TYPE_SIGNAL
 
 dnl Checks for library functions.
+
+
+dnl Output files
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
